fix(VINScanner): homepage mobile ui spacing

--- a/VINScanner/css/index.css
+++ b/VINScanner/css/index.css
@@ -25,7 +25,7 @@ body {
   height: 100%;
   -webkit-text-size-adjust: 100%;
   /* Prevent font scaling in landscape while allowing user zoom */
-  overflow: hidden;
+  background-color: #2b2b2b;
 }
 
 button {
@@ -52,6 +52,7 @@ img {
   color: #ffffff;
   background-color: #2b2b2b;
   padding: 30px 0;
+  gap: 2rem;
 }
 
 .home-page .logo {
@@ -102,6 +103,7 @@ img {
 .home-page .powered-by-msg {
   font-size: 16px;
   font-family: Oswald-Light;
+  padding-bottom: 2rem;
 }
 
 .scanner-container {
@@ -451,6 +453,10 @@ img {
 }
 
 @media screen and (max-width: 800px) {
+  html,
+  body {
+    background-color: #323234;
+  }
   .home-page {
     background-color: #323234;
   }
